--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,10 @@
 /* write your override styles here */
+#wall .tag-1 {
+  display:none;
+}
+body #wall #tag-2 {
+  display:none;
+}
+#wall #tag-4 [class='slick wicked'] {
+  display:none;
+}
